--- a/Курсовая работа/KR.Web/KR.Web.csproj
+++ b/Курсовая работа/KR.Web/KR.Web.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="BackUp\**" />
+    <Content Remove="BackUp\**" />
+    <EmbeddedResource Remove="BackUp\**" />
+    <None Remove="BackUp\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BlazorDownloadFile" Version="2.4.0.2" />
     <PackageReference Include="Blazored.LocalStorage" Version="4.2.0" />
     <PackageReference Include="Blazored.Toast" Version="3.2.2" />
